--- a/layouts/basic/skins/style.css
+++ b/layouts/basic/skins/style.css
@@ -1427,6 +1427,8 @@ th.htColHeader,
 .groupMembersColors li > div {
 	margin-left: 10px;
 }
+.select2-results__option.Users,
+.select2-selection__choice.Users,
 #s2id_memberList .Users,
 .groupMembersColors .Users {
 	background-color: #f99984 !important;
@@ -1434,6 +1436,8 @@ th.htColHeader,
 	margin-bottom: 2px;
 	background-image: none;
 }
+.select2-results__option.Groups,
+.select2-selection__choice.Groups,
 #s2id_memberList .Groups,
 .groupMembersColors .Groups {
 	background-color: #acd5ff !important;
@@ -1441,6 +1445,8 @@ th.htColHeader,
 	padding: 5px;
 	margin-bottom: 2px;
 }
+.select2-results__option.Roles,
+.select2-selection__choice.Roles,
 #s2id_memberList .Roles,
 .groupMembersColors .Roles {
 	background-color: #ffec98 !important;
@@ -1448,12 +1454,21 @@ th.htColHeader,
 	padding: 5px;
 	margin-bottom: 2px;
 }
+.select2-results__option.RoleAndSubordinates,
+.select2-selection__choice.RoleAndSubordinates,
 #s2id_memberList .RoleAndSubordinates,
 .groupMembersColors .RoleAndSubordinates {
 	background-color: #c4dea2 !important;
 	background-image: none;
 	padding: 5px;
 	margin-bottom: 2px;
+}
+.select2-results__option.Users.select2-results__option--highlighted,
+.select2-results__option.Groups.select2-results__option--highlighted,
+.select2-results__option.Roles.select2-results__option--highlighted,
+.select2-results__option.RoleAndSubordinates.select2-results__option--highlighted
+{
+	background-color: #337ab7 !important; 
 }
 .collectiveGroupMembers {
 	border: 1px solid #dddddd;
