Improved mail queue and mail smtp panels

--- a/layouts/basic/skins/style.css
+++ b/layouts/basic/skins/style.css
@@ -5783,6 +5783,6 @@ td.rightRecordActions.medium{
     right: 30px;
     position: absolute;
 }
-.queuqActionImages .glyphicon{
+.smActionImages .glyphicon{
 	top: -1px;
 }
