fix typo related

--- a/layouts/basic/skins/style.css
+++ b/layouts/basic/skins/style.css
@@ -5805,7 +5805,7 @@ select.form-control {
 .marginIcon {
 	margin-left: .3em;
 }
-.addReletedRecordBtn {
+.addRelatedRecordBtn {
     top: 20px;
     right: 30px;
     position: absolute;
