--- a/layouts/basic/skins/twilight/style.css
+++ b/layouts/basic/skins/twilight/style.css
@@ -8,3 +8,49 @@
 .userInfoFooter .leftPanel{
 	bottom: 50px;
 }
+input[type=checkbox] {
+	border: 1px solid rgba(0,0,0,0.54);
+	width: 17px;
+	margin: 0px 0 0;
+	transition: 0.25s;
+	white-space: nowrap;
+	height: 17px;
+	position: relative;
+	-webkit-appearance: none;
+	background: #fff;
+	border-radius: 3px;
+	border-color: #d7d7d7;
+}
+input[type=checkbox]:checked::after, 
+.checkbox input[type=checkbox]:checked::after, 
+.checkbox-inline input[type=checkbox]:checked::after {
+	box-sizing: border-box;
+	-webkit-transform: rotate(45deg);
+	transform: rotate(45deg);
+	position: absolute;
+	left: 4.5px;
+	border-color: #fff;
+	top: 0px;
+	display: table;
+	width: 5px;
+	height: 11px;
+	border-width: 2px;
+	border-style: solid;
+	border-top: 0;
+	border-left: 0;
+	content: '';
+}
+input[type=checkbox]:checked {
+	background-color: #4a5364;
+	border-color: #384150;
+}
+input[type=checkbox]:disabled {
+	background-color: #e6e6e6;
+}
+input[type=checkbox]:checked:disabled {
+	opacity: 0.35;
+}
+input[type=checkbox]:focus {
+	outline: none;
+	box-shadow: inset 0 1px 1px rgba(255,255,255,0.075), 0 0px 2px #384150;
+}
