--- a/layouts/basic/skins/twilight/style.css
+++ b/layouts/basic/skins/twilight/style.css
@@ -54,3 +54,47 @@ input[type=checkbox]:focus {
 	outline: none;
 	box-shadow: inset 0 1px 1px rgba(255,255,255,0.075), 0 0px 2px #384150;
 }
+input[type="radio"] {
+	position: relative;
+	width: 16px;
+	height: 16px;
+	background-clip: border-box;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	vertical-align: text-bottom;
+	border-radius: 50%;
+	background-color: #fff;
+	border: 2px solid #d7d7d7;
+}
+input[type="radio"]:disabled {
+	background-color: #e6e6e6;
+}
+input[type="radio"]:checked:disabled {
+	opacity: 0.6;
+}
+input[type="radio"]:before {
+	margin: 6px 0 0 6px;
+	content: '';
+	display: block;
+	height: 0px;
+	width: 0px;
+	border-radius: 50%;
+	-webkit-transition: all 0.25s;
+	transition: all 0.25s;
+}
+input[type="radio"]:checked:before {
+	margin: 3px 0 0 3px;
+	height: 6px;
+	width: 6px;
+}
+input[type="radio"]:focus {
+	outline: none;
+	box-shadow: inset 0 1px 1px rgba(255,255,255,0.075), 0 0px 2px #404958;
+}
+input[type="radio"]:checked {
+	border: 2px solid #4a5364;
+}
+input[type="radio"]:checked:before {
+	background-color: #4a5364;
+}
