Added minor improvements

--- a/public_html/layouts/basic/skins/style.css
+++ b/public_html/layouts/basic/skins/style.css
@@ -562,6 +562,10 @@ hr {
 	opacity: 0.5;
 	padding-right: 6px;
 }
+.gridster > ul li.dashboardWidget .dashboardWidgetHeader .box {
+    position: relative;
+    top: -2px;
+}
 .gridster > ul li.dashboardWidget .filterContainer {
 	position: absolute;
 	border: 1px solid #dddddd;
