--- a/public_html/layouts/basic/skins/style.css
+++ b/public_html/layouts/basic/skins/style.css
@@ -5948,7 +5948,7 @@ select.form-control {
 .dashboardWidget {
 	overflow: hidden;
 }
-.fc-basic-view .fc-body .fc-row {
+.bottom_margin .fc-basic-view .fc-body .fc-row {
     min-height: 9em  !important;
 }
 .Home_DashBoard .widget_header{
