fix issue from menu scroll

--- a/public_html/layouts/basic/skins/style.css
+++ b/public_html/layouts/basic/skins/style.css
@@ -5985,5 +5985,9 @@ select.form-control {
 	margin-left: 6px;
 	font-weight: bold;
 }
-
-
+.ps-scrollbar-y-rail{
+	display:none !important;
+}
+.slimScrollBar{
+	right: -7px !important;
+}
